kubernetes/apps/flux-system/headlamp/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: Headlamp
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/description: "🔑 SSO Proxy | Kubernetes dashboard"
    gethomepage.dev/siteMonitor: "https://headlamp.gddnet.io"
spec:
  hostnames: ["headlamp.gddnet.io"]
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: gdd-security
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
